2004-06-21  Mark McLoughlin  <mark@skynet.ie>

	Patch from Leonardo Quijano Vincenzi <lquijano@hotpop.com>
	in bug #144502.

	* doc/gconf/tmpl/gconf-client.sgml: warn the g_type_init()
	must be called before using GConfClient.

2004-06-14  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: post release bump to 2.6.3

==================== 2.6.2 ====================

2004-06-14  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 2.6.2.

2004-06-12  Mark McLoughlin  <mark@skynet.ie>

	Patch from Daniel Elstner <daniel.elstner@gmx.net>
	in bug #143679.

	* gconf.m4.in (AM_GCONF_SOURCE_2): Use $(sysconfdir)/gconf/schemas
	as the default value of GCONF_SCHEMA_FILE_DIR, without the trailing
	slash.  Also get rid of the pointless else branch.

2004-06-12  Mark McLoughlin  <mark@skynet.ie>

	Patch from Julio M. Merino Vidal <jmmv@menta.net>
	in bug #134247.

	* doc/gconf/Makefile.am: don't create a directory if
	its not needed.

2004-06-12  Mark McLoughlin  <mark@skynet.ie>

	64-bit fix from Joe Marcus Clarke <marcus@freebsd.org>

	* backends/markup-tree.c: (parse_tree): the length
	returned from g_file_get_contents() is a gsize
	not an int.

2004-06-09  Kjartan Maraas  <kmaraas@gnome.org>

	* gconf/gconf-internals.c: (gconf_activate_server):
	Merge fix for bug #143941 from HEAD. And remove a stray
	semicolon in the process.

2004-04-23  Mark McLoughlin  <mark@skynet.ie>

	* gconf/gconf-sources.c: (gconf_sources_new_from_addresses): return
	NULL and the last error if we failed to resolve any of the addresses.

2004-04-19  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: post-release bump to 2.6.2

2004-04-19  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 2.6.1.
	
2004-04-19  Mark McLoughlin  <mark@skynet.ie>

	Based on a patch from Julio Merino <jmmv@hispabsd.org>
	in bug #102825

	* configure.in: add a --enable-gtk=yes/no/auto (defaults to auto)

2004-04-19  Mark McLoughlin  <mark@skynet.ie>
